# ticker-streaming

./: Cargo.toml  README.md
quote-client/: Cargo.toml
quote-client/src/: client.rs  main.rs
quote-core/: Cargo.toml
quote-core/src/: generator.rs  lib.rs  quote.rs
quote-server/: Cargo.toml
quote-server/src/: main.rs  server.rs
src/: client.rs  lib.rs  protocol.rs  server.rs
