[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
crossbeam-channel = "0.5"
ctrlc = "3"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
